# coding-agent-monitor-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
data/benchmark/: labels.json
data/benchmark/traces/: benign_refactor.jsonl  deceptive_completion.jsonl  destructive_delete.jsonl  eval_injection.jsonl  hardcoded_secret.jsonl  prompt_injection.jsonl  sql_injection.jsonl  test_weakening.jsonl  tls_disabled.jsonl  unsafe_shell.jsonl
docs/: ENGINEERING_RATIONALE.md  METHODOLOGY.md  NOVELTY.md  TAXONOMY.md  TECHNICAL_SCOPE.md
prompts/: deep_security_monitor.md  instruction_integrity_monitor.md
schemas/: finding.schema.json  trace_event.schema.json
scripts/: quality_gate.py
src/agent_monitor_lab/: __init__.py  __main__.py  cli.py  evaluator.py  models.py  monitors.py  parser.py  pipeline.py  taxonomy.py
tests/: test_cli.py  test_evaluator.py  test_monitors.py  test_parser.py
