[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-monitor-lab"
version = "0.1.0"
description = "Evidence-first monitoring experiments for AI coding-agent traces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Oyinkansola Onwuchekwa", email = "keenahkaychekwas@gmail.com" }
]
keywords = [
  "ai-safety",
  "coding-agents",
  "llm-evaluation",
  "monitoring",
  "security",
  "agent-control"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security"
]

[project.scripts]
agent-monitor = "agent_monitor_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

